--- a/.sencha/app/development.defaults.properties
+++ b/.sencha/app/development.defaults.properties
@@ -14,10 +14,10 @@
 # during each app upgrade.
 # =============================================================================
 
-build.options.logger=yes
+build.options.logger=no
 
-build.options.debug=true
+build.options.debug=false
 
 app.microloader.name=testing.js
-
+build.compression.yui=1
 build.include.all.css=true
